testing/tests/ui/multiple_extends.stderr
error: the previous template error derives from
 --> tests/ui/multiple_extends.rs:4:21
  |
4 |   #[template(source = r#"
  |  _____________________^
5 | | {% extends "let.html" %}
6 | | {% extends "foo.html" %}
7 | | "#, ext = "txt")]
  | |__^
